--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -20,6 +20,7 @@
 .wrapper {
   display: grid;
   grid-gap: 20px;
+  padding: 1rem;
   grid-template-areas: 
     "header"
     "nav"
@@ -33,15 +34,19 @@
   .wrapper {
     grid-template-columns: 1fr 3fr;
     grid-template-areas: 
-      "header  header"
-      "nav     nav"
+      "header      nav"
       "content content"
       "sidebar sidebar"
       "ad      footer";
   }
-  
+
   nav ul {
-    display: flex;
+    display: inline-flex;
     justify-content: space-between;
+    list-style-type: none;
+  }
+
+  nav ul li {
+    padding: 5px;
   }
 }
