--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -50,3 +50,24 @@
     padding: 5px;
   }
 }
+
+.form {
+  display: grid;
+  grid-template-columns: [labels] auto [controls] 1fr;
+  grid-auto-flow: row;
+  grid-gap: .8em;
+  background: #eee;
+  padding: 1.2em;
+}
+.form > label  {
+  grid-column: labels;
+  grid-row: auto;
+}
+.form > input,
+.form > textarea,
+.form > button {
+  grid-column: controls;
+  grid-row: auto;
+  border: none;
+  padding: 1em;
+}
