--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -34,10 +34,10 @@
   .wrapper {
     grid-template-columns: 1fr 3fr;
     grid-template-areas: 
-      "header      nav"
-      "content content"
-      "sidebar sidebar"
-      "ad      footer";
+      "header  nav         nav"
+      "sidebar content content"
+      "ad      ad           ad"
+      "footer   footer  footer";
   }
 
   nav ul {
